@@ -1,6 +1,10 @@
 package Presentation;
 
+import Business.StatusBusiness;
+import Data.StatusData;
 import Domain.Account;
+import Domain.Program;
+import Logic.ColaEnlazada;
 import javafx.application.Application;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Parent;
@@ -9,7 +13,9 @@ import javafx.scene.image.Image;
 import javafx.stage.Stage;
 
 import javax.swing.*;
+import java.io.IOException;
 import java.lang.reflect.Array;
+import java.util.ArrayList;
 
 
 public class Main extends Application {
@@ -32,10 +38,10 @@ public class Main extends Application {
         Image icon = new Image(getClass().getResourceAsStream("/Image/Icons/Icon.png"));//icono de la ventana
         primaryStage.getIcons().add(icon);
 
-
     }//end start method
 
     public static void main(String[] args) {
+        //--module-path (ruta de carpeta lib) --add-modules javafx.controls,javafx.fxml
         launch(args);
     }// fin Main
 }// fin clase
